--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   page_view_indicators: ^1.3.1
+  intro_views_flutter: ^2.8.0
 
 dev_dependencies:
   flutter_test:
